v3 change log changes

--- a/app/views/layinghens/current/eligibility/aviary/elim-features.html
+++ b/app/views/layinghens/current/eligibility/aviary/elim-features.html
@@ -23,7 +23,7 @@
                         manure removal belts
                     </li>
                     <li>
-                        integrated non-flicker LED lighting at each level (including under the system) capable of automatically simulating dawn and dusk
+                        non-flicker LED lighting at each level (including under the system) capable of automatically simulating dawn and dusk
                     </li>
                 </ul>
 
