--- a/app/views/layinghens/current/eligibility/aviary/features.html
+++ b/app/views/layinghens/current/eligibility/aviary/features.html
@@ -25,7 +25,7 @@
 
                     <ul class="govuk-list govuk-list--bullet govuk-hint">
                         <li>
-                            automatic manure removal belts
+                            manure removal belts
                         </li>
                         <li>
                             non-flicker LED lighting at each level (including under the system) capable of automatically simulating dawn and dusk
@@ -84,7 +84,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    The aviary system must have an integrated automatic manure removal belt and non-flicker LED lighting system
+                    The aviary system must have integrated manure removal belts and a non-flicker LED lighting system.
                 </p>
             </div>
 
