--- a/app/views/layinghens/current/eligibility/biosecurity/elim-changing-area.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/elim-changing-area.html
@@ -24,10 +24,10 @@
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        changing facilities, with a floor-mounted physical barrier between the outer and inner biosecure areas
+                        changing facilities, with a step-over barrier between the outer and inner areas
                     </li>
                     <li>
-                        in the outer area, handwashing facilities and storage for clothes and boots that you use outside of this building
+                        in the outer area, handwashing facilities with running water and storage for clothes and boots you use outside this building
                     </li>
                     <li>
                         in the inner area, a footbath and storage for clothes and boots that you use inside of the bird living area
