--- a/app/views/layinghens/current/eligibility/biosecurity/external-taps.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/external-taps.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the building have an external tap at each main pedestrian access point?
+    Will the building have an external tap at the main pedestrian access point?
 {% endblock %}
 
 {% block content %}
@@ -23,7 +23,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the building have an external tap at each main pedestrian access point?',
+                            text: 'Will the building have an external tap at the main pedestrian access point?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
@@ -64,7 +64,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    There must be an external tap at each main pedestrian access point to manage external footbaths.
+                    There must be an external tap at the main pedestrian access point to manage external footbaths. 
                 </p>
             </div>
         </div>
