--- a/app/views/layinghens/current/eligibility/building/elim-insulation.html
+++ b/app/views/layinghens/current/eligibility/building/elim-insulation.html
@@ -16,7 +16,7 @@
 
                 {% if data['project-type'] == 'refurb' %}
                     <p>
-                        The building must have full wall and roof insulation.
+                        When the project is complete, the building must have full wall and roof insulation.
                     </p>
                 {% else %}
                     <p>
