--- a/app/views/layinghens/current/eligibility/building/elim-items.html
+++ b/app/views/layinghens/current/eligibility/building/elim-items.html
@@ -15,7 +15,7 @@
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
                 <p>
-                    The building must have:
+                    When the project is complete, the building must have:
                 </p>
 
                 <ul class="govuk-list govuk-list--bullet">
@@ -29,7 +29,7 @@
                         mesh capping applied to any roof or wall inlets and outlets capped with mesh (with a mesh hole size of 25 millimetres or less)
                     </li>
                     <li>
-                        catch trays under all chimneys and roof-mounted vents
+                        catch trays under any chimneys and roof-mounted vents
                     </li>
                 </ul>
 
