--- a/app/views/layinghens/current/eligibility/building/elim-pullet-requirements.html
+++ b/app/views/layinghens/current/eligibility/building/elim-pullet-requirements.html
@@ -26,7 +26,7 @@
                         height adjustable perches at equal to or more than 8cm per pullet
                     </li>
                     <li>
-                        a minimum of 50% of the floor area covered in litter
+                        a minimum of 50% of the floor area available for litter
                     </li>
                 </ul>
 
