--- a/app/views/layinghens/current/eligibility/common/poultry-type.html
+++ b/app/views/layinghens/current/eligibility/common/poultry-type.html
@@ -26,7 +26,7 @@
                     },
                     items: [
                         {
-                            text: 'Laying hens (over 15 weeks old)',
+                            text: 'Laying hens (over 17 weeks old)',
                             value: 'hen',
                             checked: true if data['poultry-type'] == 'hen',
                             attributes: {
@@ -34,7 +34,7 @@
                             }
                         },
                         {
-                            text: 'Pullets (up to and including 15 weeks old)',
+                            text: 'Pullets (up to and including 17 weeks old)',
                             value: 'pullet',
                             checked: true if data['poultry-type'] == 'pullet',
                             attributes: {
@@ -70,7 +70,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    This grant is for replacing or refurbishing existing housing for laying hens or pullets.
+                    This grant is only for laying hen or pullet projects.
                 </p>
             </div>
 
