--- a/app/views/layinghens/current/scoring/current-multi-tier-system.html
+++ b/app/views/layinghens/current/scoring/current-multi-tier-system.html
@@ -10,7 +10,7 @@
     {% set poultryType = data['poultry-type'] %}
 {% endif %}
 
-{% set pageHeading = 'Does your current building include a multi-tier aviary system?' %}
+{% set pageHeading = 'Does your current building include an aviary system?' %}
 {% if pageHeading != 'hen' %}
     {% set pageHeading = 'Does your current building include a multi-tier system?' %}
 {% endif %}
@@ -83,7 +83,7 @@
 
                 {% if poultryType == 'hen' %}
                 <p>
-                    RPA want to encourage investment in high-welfare multi-tier aviary systems.
+                    RPA want to encourage investment in high welfare aviary systems.
                 </p>
                 {% else %}
                 <p>
