--- a/app/views/layinghens/current/scoring/dark-brooders.html
+++ b/app/views/layinghens/current/scoring/dark-brooders.html
@@ -18,7 +18,7 @@
             {% if data['from-scoring'] == 'true' %}
                 <form action="results">
             {% else %}
-                <form action="energy">
+                <form action="grip">
             {% endif %}
 
                 {{ govukRadios ({
