--- a/app/views/layinghens/current/scoring/environment-data.html
+++ b/app/views/layinghens/current/scoring/environment-data.html
@@ -65,9 +65,9 @@
                             divider: 'or'
                         },
                         {
-                            text: 'I will not collect and store additional environmental data',
-                            value: 'I will not collect and store additional environmental data',
-                            checked: true if 'I will not collect and store additional environmental data' | isIn(data['scoring-environment-data']),
+                            text: 'None of the above',
+                            value: 'None of the above',
+                            checked: true if 'None of the above' | isIn(data['scoring-environment-data']),
                             attributes: {
                                 'data-behaviour': 'exclusive'
                             }
