--- a/app/views/layinghens/current/scoring/veranda-requirements.html
+++ b/app/views/layinghens/current/scoring/veranda-requirements.html
@@ -19,7 +19,7 @@
                 <form action="results">
             {% else %}
             
-                <form action="dark-brooders">
+                <form action="energy">
             {% endif %}
 
                 {% set hintHtml %}
