--- a/app/views/layinghens/current/eligibility/common/elim-one-thousand-birds.html
+++ b/app/views/layinghens/current/eligibility/common/elim-one-thousand-birds.html
@@ -24,9 +24,15 @@
 
                 <h1 class="govuk-heading-l">You cannot apply for a grant from this scheme</h1>
 
-                <p>
-                    You must have at least 1,000 {{ poultryDescriptor }} on your farm currently.
-                </p>
+                <ul class="govuk-list govuk-list--bullet">
+                        <li>
+                            You must be the registered keeper of at least 1000 {{ poultryDescriptor }}.
+                        </li>
+                        <li>
+                            have housed at least 1,000 {{ poultryDescriptor }} on your farm in the last 6 months.
+                        </li>
+    
+                </ul>
 
                 <p>
                     <a href="https://www.gov.uk/topic/farming-food-grants-payments/rural-grants-payments">
