--- a/app/views/layinghens/current/eligibility/veranda/elim-specification.html
+++ b/app/views/layinghens/current/eligibility/veranda/elim-specification.html
@@ -20,16 +20,25 @@
 
                 <ul class="govuk-list govuk-list--bullet">
                     <li>
-                        a solid concrete floor
+                        solid concrete floor
                     </li>
                     <li>
-                        a waterproof insulated roof
+                        waterproof insulated roof
                     </li>
                     <li>
-                        a perimeter wall at least 1 metre high
+                        a dimmable LED lighting system with a range between 0 lux and 60 lux
                     </li>
                     <li>
-                        dimmable LED lighting system between 0 lux and 60 lux
+                        a perimeter wall, at least one metre high, that includes a biosecure entrance for cleaning access
+                    </li>
+                    <li>
+                        closable pop holes in the perimeter wall, unless the veranda is part of an indoor barn system
+                    </li>
+                    <li>
+                        internal access along the length of the wall of the hen house through closable pop holes that are at least 35cm high and 40cm wide
+                    </li>
+                    <li>
+                        a mesh roller screen running underneath the length of the roof, that fits securely against the wall when you roll it down
                     </li>
                 </ul>
 
