--- a/app/views/layinghens/current/eligibility/veranda/specification.html
+++ b/app/views/layinghens/current/eligibility/veranda/specification.html
@@ -31,10 +31,19 @@
                             waterproof insulated roof
                         </li>
                         <li>
-                            perimeter wall at least 1 metre high
+                            a dimmable LED lighting system with a range between 0 lux and 60 lux
                         </li>
                         <li>
-                            dimmable LED lighting system between 0 lux and 60 lux
+                            a perimeter wall, at least one metre high, that includes a biosecure entrance for cleaning access
+                        </li>
+                        <li>
+                            closable pop holes in the perimeter wall, unless the veranda is part of an indoor barn system
+                        </li>
+                        <li>
+                            internal access along the length of the wall of the hen house through closable pop holes that are at least 35cm high and 40cm wide
+                        </li>
+                        <li>
+                            a mesh roller screen running underneath the length of the roof, that fits securely against the wall when you roll it down
                         </li>
                     </ul>
 
@@ -60,7 +69,7 @@
                             value: 'Yes',
                             checked: true if data['veranda-specification'] == 'Yes',
                             attributes: {
-                                    'data-next': 'biosecurity'
+                                    'data-next': '../building/items'
                                 }
                         },
                         {
@@ -81,6 +90,38 @@
             </form>
 
         </div>
+
+        <div class="govuk-grid-column-one-third">
+
+            <div class="app-step-nav-related app-step-nav-related--singular">
+                <h2 class="app-step-nav-related__heading">
+                <span class="app-step-nav-related__pretitle">Eligibility</span>
+                </h2>
+
+                <p>
+                    The openings of the pop holes along the length of the hen house must add up to a total of 2 metres for every 1,000 hens in the building.
+                </p>
+
+                <p>
+                    The base of all pop holes must either: 
+                </p>
+
+                <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                        be less than 30cm from floor level
+                    </li>
+                    <li>
+                        have access ramps that are as wide as the pop holes
+                    </li>
+                </ul>
+
+                <p>
+                    You must not put perches in front of the pop holes.
+                </p>
+    
+            </div>
+
+         </div>
 
 </div>
 
