--- a/app/views/layinghens/current/eligibility/biosecurity/concrete-apron.html
+++ b/app/views/layinghens/current/eligibility/biosecurity/concrete-apron.html
@@ -28,7 +28,7 @@
 
             <form method="post">
 
-            {% set nextPage = 'vehicle-washing-area' %}
+            {% set nextPage = 'egg-store' %}
             {% if poultryType != 'hen' %}
                 {% set nextPage = 'vaccination-lobby' %}
             {% endif %}
